<resources>
    <string name="app_name">WWJ McClure</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="EditFactFindText">Edit Fact Find</string>
    <string name="titleEditText">Client name</string>
    <string name="factFindEditText">Fact Find Title</string>
    <string name="dateEditText" />
    <string name="dateTextView" />
    <string name="are_you_sure_you_want_to_delete_this_fact_find_it_can_t_be_undone_">Are you sure you want to delete this Fact Find? It CANNOT be undone.</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    <string name="delete" />
    <string name="search">Search</string>
    <string name="previous_fact_finds">Previous Fact Finds</string>
    <string name="NewFactFind">New Fact Find</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="title_section1">Summary</string>
    <string name="title_section2">Personal</string>
    <string name="title_section3">Family</string>
    <string name="title_section4">Assets</string>
    <string name="title_section5">I.D.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="Sec_A_pg1_fragment">Section A Page 1</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_frag_trans">FragTrans</string>
    <string name="Sec_A_pg2_fragment">Section A Page 2</string>
</resources>
